# torch-eml

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  pyproject.toml  taylor_green_u.html  taylor_green_v.html
docs/superpowers/plans/: 2026-05-04-torch-eml.md
docs/superpowers/specs/: 2026-05-04-torch-eml-design.md
examples/: 01_symbolic_regression.py  02_drop_in_head.py  03_llm_trunk.py  04_auto_search.py  05_physics_rediscovery.py  06_mlp_vs_eml.py  07_navier_stokes.py  08_navier_stokes_compose.py  09_pde_benchmarks.py  10_traveling_wave.py  11_robustness.py  12_pysr_comparison.py  13_pde_residual_solver.py  14_3d_navier_stokes.py  15_3d_ns_multiterm.py  16_branch_closure.py  17_allen_cahn_burgers.py  18_function_discovery.py  19_function_discovery_pipeline.py  20_deep_discovery.py  21_blasius_highcompute.py  22_motif_extraction.py
notebooks/: quickstart.ipynb
paper/: main.tex  neurips_2024.sty  references.bib
paper/appendices/: appendix_a.tex  appendix_b.tex  appendix_c.tex
paper/sections/: abstract.tex  background.tex  discussion.tex  experiments.tex  introduction.tex  method.tex
tests/: test_auto.py  test_compose.py  test_head.py  test_integration.py  test_node.py  test_primitives.py  test_pruning.py  test_symbolic.py  test_tree.py  test_trunk.py  test_viz.py
torch_eml/: __init__.py  auto.py  compose.py  head.py  node.py  primitives.py  pruning.py  symbolic.py  tree.py  trunk.py  viz.py
